fix navbar alignment

--- a/styles/component.css
+++ b/styles/component.css
@@ -1,5 +1,7 @@
 /* HEADER */
 .header__navbar {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(6rem, 1fr));
   grid-row: 1;
   background-color: var(--color-accent-background);
   padding: 1rem 2rem;
@@ -63,7 +65,6 @@
   grid-row: 2;
   grid-column: 1;
   list-style: none;
-  /* justify-content: center; */
 }
 
 .toplist--title {
